--- a/src/scss/pages/App.scss
+++ b/src/scss/pages/App.scss
@@ -1,9 +1,7 @@
+@import 'main';
+
 .center {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-}
-
-h1, h2 {
-	color: rgb(178, 192, 191);
 }
