Added animations to buttons in game

--- a/src/scss/pages/Game.scss
+++ b/src/scss/pages/Game.scss
@@ -1,2 +1,7 @@
 @import 'App';
 
+.popIn {
+	@include transition('> div', (
+		transform: scaleY(0) scaleY(1),
+	), .5s, cubic-bezier(0.250, 0.250, 0.370, 1.650) ease)
+}
