--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -19,29 +19,34 @@
 	$tf: []; $list: ();
 
 	@if $exit and type-of($timing-function) == 'list' { $tf: append($speed, nth($timing-function, 2)); }
+	@else if type-of($timing-function) == 'list' { $tf: append($speed, nth($timing-function, 1)); }	
 	@else { $tf: append($speed, $timing-function); }
 
 	@each $val in $prop-keys { $list: join($list, append([], append($val, $tf)), $separator: comma); }
 	@return $list;
 }
 
-@mixin transition($props, $speed, $timing-function) {
+@mixin transition($child, $props, $speed, $timing-function) {
 
 	@each $key, $val in $props {
 		@if not length($val) == 2 or not length($val) == 3 { @error $key length is not 2 or 3; }
 	}
 
-	&{ @include list($props, true, false); }
+	& #{$child} { @include list($props, true, false); }
 
 	&-enter {
-		transition: get-transition(map-keys($props), $speed, $timing-function);
-		@include list($props, true, false);
-		&-active, &-done { @include list($props, false, false); }
+		& #{$child} {
+			transition: get-transition(map-keys($props), $speed, $timing-function);
+			@include list($props, true, false);
+		};
+		&-active #{$child}, &-done #{$child} { @include list($props, false, false); }
 	}
 
 	&-exit {
-		transition: get-transition(map-keys($props), $speed, $timing-function, true);
-		@include list($props, true, true);
-		&-active, &-done { @include list($props, false, true); }
+		& #{$child} {
+			transition: get-transition(map-keys($props), $speed, $timing-function, true);
+			@include list($props, true, true);
+		};
+		&-active #{$child}, &-done #{$child} { @include list($props, false, true); }
 	}
 }
