Optimized bundle size and scss file structure

--- a/src/scss/pages/App.scss
+++ b/src/scss/pages/App.scss
@@ -1,23 +1,9 @@
-@import '~normalize-scss/sass/normalize';
-@import '~bootstrap/scss/bootstrap.scss';
-@import '../base/mixins';
-
-@include normalize();
-
-* , *::before, *::after {
-	box-sizing: border-box;
-}
+@import '~bootstrap/scss/bootstrap-grid';
+@import '~bootstrap/scss/bootstrap-reboot';
+@import "~bootstrap/scss/utilities";
 
 .center {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
-
-// @include transition((
-// 	top: 10% 0,
-// 	z-index: inherit inherit,
-// 	opacity: 0 1,
-// 	pointer-events: none initial,
-// 	background-color: initial rgba(0,0,0,0.6),
-// ), .5s, ease)
