--- a/src/scss/pages/Game.scss
+++ b/src/scss/pages/Game.scss
@@ -3,7 +3,7 @@
 @import '../components/transition';
 
 .popIn {
-	@include transition('> div', (
+	@include transition('div', (
 		transform: scaleY(0) scaleY(1),
 	), .5s, cubic-bezier(0.250, 0.250, 0.370, 1.650) ease)
 }
@@ -12,5 +12,5 @@
 	@include transition('', (
 		transform: translateY(-100%) translateY(0) translateY(100%),
 		opacity: 0 1
-	), .5s, ease-out ease-in)
+	), .4s, ease-out ease-in)
 }
