--- a/src/scss/pages/Game.scss
+++ b/src/scss/pages/Game.scss
@@ -2,13 +2,13 @@
 @import '~bootstrap/scss/_buttons';
 @import '../components/transition';
 
-.popIn {
+.animateButtons {
 	@include transition('div', (
 		transform: scaleY(0) scaleY(1),
 	), .5s, cubic-bezier(0.250, 0.250, 0.370, 1.650) ease)
 }
 
-.slideFadeIn {
+.animateQuestion {
 	@include transition('', (
 		transform: translateY(-100%) translateY(0) translateY(100%),
 		opacity: 0 1
