Added complete screen

--- a/src/scss/pages/Game.scss
+++ b/src/scss/pages/Game.scss
@@ -1,5 +1,5 @@
 @import 'App';
-@import '~bootstrap/scss/_buttons';
+@import '~bootstrap/scss/buttons';
 @import '../components/transition';
 
 .animateButtons {
