--- a/src/scss/pages/Main.scss
+++ b/src/scss/pages/Main.scss
@@ -1,5 +1,5 @@
 @import 'App';
-@import "~bootstrap/scss/buttons";
+@import '~bootstrap/scss/buttons';
 @import '../components/transition';
 
 .animatePage {
