--- a/src/scss/pages/Main.scss
+++ b/src/scss/pages/Main.scss
@@ -5,7 +5,8 @@
 .animatePage {
 	@include transition ('', (
 		transform: (scaleY(.5) scaleX(.5)) (scaleY(1) scaleX(1)) (scaleY(1.5) scaleX(1.5)),
-		opacity: 0 1
+		opacity: 0 1,
+		pointer-events: none visible
 	), .2s, ease);
 }
 
